On Firefox 119 Nightly and 118 beta 8 and 9 for Android, video playback occasionally stops while audio continues, then both resume from where video had stopped
Categories
(Core :: Audio/Video: cubeb, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox-esr115 | --- | unaffected |
firefox117 | --- | unaffected |
firefox118 | + | fixed |
firefox119 | --- | fixed |
People
(Reporter: yannis, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
46.72 KB,
text/plain
|
Details | |
27.52 KB,
application/json
|
Details | |
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Device information: Fairphone 3, arm64, with Android 11, software version 8901.4.A.0025.0.
Steps to reproduce:
- Visit youtube.com on Firefox Nightly for Android.
- Watch any video of, say, at least 10 minutes.
Problem:
Every 60 to 120 seconds, the video playback stops and shows a spinning wheel. Meanwhile, audio continues. About 20 seconds later, video playback and audio both resume from the point where video playback had stopped.
Last known good build: Firefox Nightly 119.0.a1 2023-09-08-17-12-18 built from 3396ae36832c1e444d7373ab021be20072d57e89.
First known bad build: Firefox Nightly 119.0.a1 2023-09-09-04-03-11 built from eb062b89c03adc9b41355ee054d8582fda6b482d.
Regression range: here.
I'm tempted to say this could be regressed by bug 1848518 (which has just been uplifted to beta)?
I will attach extra information in the next comments.
Comment 1•2 years ago
|
||
Paul, kinetik,
This seems a cubeb regression, do y'all have any time to check this issue?
Thanks!
Reporter | ||
Comment 2•2 years ago
•
|
||
Here is a logcat of ~30 seconds, where the issue should be happening more or less during the last ~20 seconds.
Reporter | ||
Comment 3•2 years ago
|
||
Here is my about:support
.
Reporter | ||
Comment 4•2 years ago
•
|
||
DailyMotion seems to behave a bit differently: video stops and shows continuously the last video frame without a spinning wheel, audio continues, video occasionally updates to a single more recent frame, then after ~1 minute audio and video resume without going back to the original point of desynchronisation.
Comment 5•2 years ago
|
||
Setting Bug 1848518 as the regressor, please correct if needed after the investigation in Comment 1
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1848518
Reporter | ||
Comment 7•2 years ago
•
|
||
I should probably mention why I'm pointing to bug 1848518 in particular. While I was using mozgression with GeckoViewExample, it turned out that "bad" builds of GVE had audio playback (together with the problem described here), whereas "good" builds of GVE had no audio playback (but didn't have the problem described here). That helped me reach the last known good build quicker ("do I have audio playback in GVE?"), then I confirmed in Firefox Nightly that this was indeed the last known good build for the problem described here.
Updated•2 years ago
|
Updated•2 years ago
|
Comment 8•2 years ago
|
||
The bug is marked as tracked for firefox118 (beta). We have limited time to fix this, the soft freeze is in 7 days. However, the bug still isn't assigned and has low severity.
:jimm, could you please find an assignee and increase the severity for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
Updated•2 years ago
|
Comment 10•2 years ago
•
|
||
FYI. Reverting this commit helps. https://github.com/mozilla/cubeb/commit/46f10c2eeaeef949a139f1e2b672989895cec98e
Sorry , wrongly tested.
The bug starts from this commit. https://github.com/mozilla/cubeb/commit/4dfcbd32fd854872040c7b9ff8a839b33f336f8f
Reporter | ||
Comment 11•2 years ago
•
|
||
(In reply to Yannis Juglaret [:yannis] from comment #0)
I'm tempted to say this could be regressed by bug 1848518 (which has just been uplifted to beta)?
I confirm that I can now reproduce the issue in Firefox 118 beta 8.
Reporter | ||
Updated•2 years ago
|
Comment 12•2 years ago
•
|
||
After some testing:
I found that https://github.com/mozilla/cubeb/commit/4dfcbd32fd854872040c7b9ff8a839b33f336f8f?diff=unified#diff-481be8adcfca43a9a80fe319f0991d6deefd89501017a4e56c442b1a690affeaL1724-R1726 this line is the cause of bug.
change back from uin32_t to uint64_t fix the bug.
Some guess:
Uin32_MAX ( 4,294,967,295 ) / Sample_rate (48000) / 1000 -> 89.47s about 1min30s.
Assignee | ||
Comment 13•2 years ago
|
||
Yes, this is going through our CI currently, thanks for double-checking.
Assignee | ||
Comment 14•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Comment 15•2 years ago
|
||
Depends on D188348
Comment 16•2 years ago
|
||
Can uin64_t be used in armv7a 32bits
Comment 17•2 years ago
|
||
Comment 18•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d5a0ac5140d8
https://hg.mozilla.org/mozilla-central/rev/39b3e5649496
Comment 19•2 years ago
|
||
Please nominate this for Beta approval.
Reporter | ||
Comment 20•2 years ago
|
||
The latest Nightly build works like a charm, thanks!
(In reply to f38382014-buzilla from comment #16)
Can uin64_t be used in armv7a 32bits
Yes. You can install Firefox Nightly from the Play Store right now to make sure that the issue is fixed for you too, or wait until the fix reaches Firefox Beta.
Assignee | ||
Comment 21•2 years ago
|
||
Comment on attachment 9353416 [details]
Bug 1853012 - Update libcubeb to revision f9c118d. r?#cubeb-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: Video can can only play for 1:34 and then appears to be buffering (but audio continues), and then a/v sync is off when video starts again on Android version 10 and below.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Play a video that is longer than 1:34, it should work
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Patch found independently by two people, simple fix reverting to a previous version of a single line.
- String changes made/needed:
- Is Android affected?: Yes
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 22•2 years ago
|
||
1:24 actually but it doesn't matter.
Comment 23•2 years ago
|
||
Comment on attachment 9353416 [details]
Bug 1853012 - Update libcubeb to revision f9c118d. r?#cubeb-reviewers
Approved for landing on mozilla-beta before the merge, will be in the 118.0 release candidate, thanks.
Updated•2 years ago
|
Comment 24•2 years ago
|
||
uplift |
Updated•2 years ago
|
Reporter | ||
Updated•2 years ago
|
Description
•